# shopify-function-wasm-api

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  dev.yml  trampoline.wat
.github/: dependabot.yml
.github/workflows/: ci.yml  cla.yml  cla.yml   publish.yml
api/: Cargo.toml  README.md  build.rs
api/examples/: cart-checkout-validation-wasi-json.rs  cart-checkout-validation-wasm-api.rs  echo.rs  log-len.rs  log-past-capacity.rs  log.rs  panic.rs  serialization.rs  simple.rs
api/src/: README.md  lib.rs  local.rs  log.rs  read.rs  shopify_function.h  shopify_function.wat  shopify_function_v2.wat  wasm.rs  write.rs
api/src/test_data/: header_test.c  header_test.wasm
codegen/: README.md  package-lock.json  package.json  tsconfig.json
codegen/fixtures/: json_query.graphql  json_schema.graphql  json_types.graphql  nested_query.graphql  nested_schema.graphql  union_query.graphql  union_schema.graphql
codegen/src/: index.ts  lib.ts  parser.ts  schema-model.ts
codegen/src/emitters/: c.ts  go.ts  zig.ts
codegen/tests/: codegen.test.ts
conformance_tests/: Cargo.toml  test_cases.json
conformance_tests/src/: lib.rs
conformance_tests/tests/: conformance_test.rs
core/: Cargo.toml
core/src/: lib.rs  log.rs  read.rs  write.rs
examples/: null_fields.rs
integration_tests/: Cargo.toml  build.rs
integration_tests/benches/: benchmark.rs
integration_tests/src/: lib.rs
integration_tests/tests/: c_example_test.rs  docs_sync_test.rs  go_example_test.rs  integration_test.rs  zig_example_test.rs
integration_tests/tests/snapshots/: docs_sync_test__all_files_consistency_issues.snap  docs_sync_test__consumer_wat_content.snap  docs_sync_test__header_wasm_function_name_consistency_diff.snap  docs_sync_test__header_wasm_module_name_consistency_diff.snap  docs_sync_test__shopify_function_wat_content.snap  docs_sync_test__shopify_function_wat_imports_diff.snap
provider/: Cargo.toml
provider/src/: alloc.rs  lib.rs  log.rs  read.rs  string_interner.rs  write.rs
provider/src/read/: lazy_value_ref.rs  msgpack_input.rs  msgpack_utils.rs  value_ref.rs
provider/src/write/: state.rs
sdks/c/: Makefile  README.md
sdks/c/examples/: cart-checkout-validation.c  echo.c  interned-echo.c
sdks/c/include/: shopify_function_value.h
sdks/c/src/: shopify_function_value.c
sdks/go/: Makefile  README.md  go.mod
sdks/go/examples/cart-checkout-validation/: main.go
sdks/go/examples/echo/: main.go
sdks/go/examples/interned-echo/: main.go
sdks/go/shopify_function/: imports.go  output.go  value.go
sdks/zig/: README.md  build.zig  build.zig.zon
sdks/zig/examples/: cart-checkout-validation.zig  echo.zig  interned-echo.zig
sdks/zig/src/: shopify_function.zig
trampoline/: Cargo.toml
trampoline-cli/: Cargo.toml
trampoline-cli/src/: main.rs
trampoline-cli/tests/: integration_test.rs
trampoline/src/: consumer.wat  lib.rs  main.rs  trampoline.wat
trampoline/src/snapshots/: shopify_function_trampoline__test__disassemble_trampoline@consumer.wat.snap  shopify_function_trampoline__test__disassemble_trampoline@empty.wat.snap
trampoline/src/test_data/: consumer.wat  empty.wat
trampoline/tests/: consumer.wat  integration_test.rs  trampoline.wat
zig/: README.md  build.zig  build.zig.zon
zig/api/: build.zig  build.zig.zon
zig/api/examples/: cart-checkout-validation.zig
zig/api/src/: lib.zig  read.zig  write.zig
zig/core/: build.zig  build.zig.zon
zig/core/src/: lib.zig  read.zig  write.zig
