[package]
name = "shopify_function_wasm_api"
version = "0.0.1"
edition = "2021"

[dependencies]
shopify_function_wasm_api_core = { path = "../core", version = "0.0.1" }
thiserror = "2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
shopify_function_wasm_api_provider = { path = "../provider", version = "0.0.1" }
serde_json = "1.0"
rmp-serde = "1.3"

[dev-dependencies]
anyhow = "1.0"

[[example]]
name = "echo"
path = "examples/echo.rs"
