[package]
name = "shopify_function_wasm_api"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/shopify-function-wasm-api"
homepage = "https://github.com/Shopify/shopify-function-wasm-api"
description = "High-level interface for interfacing with the Shopify Function Wasm API"

[dependencies]
shopify_function_wasm_api_core = { path = "../core", version = "0.0.1" }
thiserror = "2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
shopify_function_provider = { path = "../provider", version = "1.0.0" }
serde_json = "1.0"
rmp-serde = "1.3"

[[example]]
name = "echo"
path = "examples/echo.rs"
