[package]
name = "shopify_function_wasm_api"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/shopify-function-wasm-api"
homepage = "https://github.com/Shopify/shopify-function-wasm-api"
description = "High-level interface for interfacing with the Shopify Function Wasm API"

[dependencies]
shopify_function_wasm_api_core = { path = "../core", version = "0.1.0" }
thiserror = "2.0"
seq-macro = "0.3.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
shopify_function_provider = { path = "../provider", version = "1.0.1" }
serde_json = "1.0"
rmp-serde = "1.3"

[dev-dependencies]
serde_json = "1.0"
rmp-serde = "1.1"
paste = "1.0"

[[example]]
name = "echo"
path = "examples/echo.rs"

[[example]]
name = "cart-checkout-validation-wasm-api"
path = "examples/cart-checkout-validation-wasm-api.rs"

[[example]]
name = "cart-checkout-validation-wasi-json"
path = "examples/cart-checkout-validation-wasi-json.rs"

