[package]
name = "conformance_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "38.0.4"
anyhow = "1.0"
rmp-serde = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
shopify_function_trampoline = { path = "../trampoline" }
shopify_function_provider = { path = "../provider" }
