[package]
name = "shopify_function_wasm_api_core"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/shopify-function-wasm-api"
homepage = "https://github.com/Shopify/shopify-function-wasm-api"
description = "Low-level primitives of the Shopify Function Wasm API"

[dependencies]
strum = { version = "0.27.1", features = ["derive"] }
