[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"
anyhow = "1.0"
deterministic-wasi-ctx = "1.0.0"
rmp-serde = "1.3"
serde_json = "1.0"
shopify_function_trampoline = { path = "../trampoline" }
shopify_function_provider = { path = "../provider" }

[dev-dependencies]
criterion = "0.6"
walrus = "0.23.3"
anyhow = "1.0"
wat = "1.229.0"
insta = "1"

[[bench]]
name = "benchmark"
harness = false
