[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "32.0.1"
anyhow = "1.0"
deterministic-wasi-ctx = "1.2.0"
rmp-serde = "1.3"
serde_json = "1.0"
shopify_function_trampoline = { path = "../trampoline" }
shopify_function_provider = { path = "../provider" }

[dev-dependencies]
walrus = "0.23.3"
anyhow = "1.0"
wat = "1.241.2"
insta = "1"
