[package]
name = "shopify_function_wasm_api_provider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
once_cell = "1.20.3"
rmpv = "1.3.0"
shopify_function_wasm_api_core = { path = "../core", version = "0.1.0" }

[dev-dependencies]
rmp = "0.8.14"
paste = "1.0"
