[package]
name = "shopify_function_wasm_api_provider"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
rmp = "0.8.14"
shopify_function_wasm_api_core = { path = "../core", version = "0.0.1" }

[dev-dependencies]
paste = "1.0"
rmp-serde = "1.3"
serde_json = "1.0"
