[package]
name = "shopify_function_provider"
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/shopify-function-wasm-api"
homepage = "https://github.com/Shopify/shopify-function-wasm-api"
description = "Provider for the Shopify Function Wasm API"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
rmp = "0.8.14"
shopify_function_wasm_api_core = { path = "../core", version = "0.1.0" }
bumpalo = { version = "3.18.1", features = ["collections"] }

[dev-dependencies]
paste = "1.0"
rmp-serde = "1.3"
serde_json = "1.0"
