[package]
name = "shopify_function_trampoline"
version = "2.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/shopify-function-wasm-api"
homepage = "https://github.com/Shopify/shopify-function-wasm-api"
description = "Tool for augmenting Wasm modules to be compatible with the Shopify Function Wasm API"

[dependencies]
walrus = "0.24.4"
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
wasmparser = "0.243.0"

[dev-dependencies]
uuid = { version = "1.19.0", features = ["v4"] }
assert_cmd = "2.1.2"
predicates = "3.1.3"
wat = "1.244.0"
wasmprinter = "0.243.0"
insta = { version = "1.46", features = ["glob"] }
