[package]
name = "shopify_function_trampoline"
version = "2.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/shopify-function-wasm-api"
homepage = "https://github.com/Shopify/shopify-function-wasm-api"
description = "Tool for augmenting Wasm modules to be compatible with the Shopify Function Wasm API"

[dependencies]
walrus = "0.26.0"
anyhow = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
wasmparser = "0.245.1"

[dev-dependencies]
uuid = { version = "1.23.0", features = ["v4"] }
assert_cmd = "2.2.0"
predicates = "3.1.4"
wat = "1.245.1"
wasmprinter = "0.245.1"
insta = { version = "1.47", features = ["glob"] }
