[package]
name = "shopify_function_trampoline"
version = "2.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/shopify-function-wasm-api"
homepage = "https://github.com/Shopify/shopify-function-wasm-api"
description = "Tool for augmenting Wasm modules to be compatible with the Shopify Function Wasm API"

[dependencies]
walrus = "0.26.1"
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
wasmparser = "0.246.2"

[dev-dependencies]
uuid = { version = "1.23.1", features = ["v4"] }
assert_cmd = "2.2.1"
predicates = "3.1.4"
wat = "1.246.2"
wasmprinter = "0.246.2"
insta = { version = "1.47", features = ["glob"] }
